--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,176 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;700&display=swap');
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Comfortaa', cursive;
+}
+.main_div{
+    width: 100vw;
+    height: 100vh;
+    background: #7bed9f;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.center_div{
+    position: relative;
+    height: 92vh;
+    background-color: #f4f4f4;
+    box-shadow: 5px 5px 25px -5px rgba(0,0,0,0.5);
+    border-radius: 15px;
+    padding: 20px;
+    overflow: hidden;
+    margin: 10px;
+}
+h1{
+    color: rgba(0,0,0,0.87);
+    font-size: 40px;
+    margin-bottom: 10px;
+    min-width: 64px;
+    box-sizing: border-box;
+    font-weight: 500;
+    border-radius: 4px;
+    letter-spacing: 0.01em;
+    text-transform: uppercase;
+
+}
+.input{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+input{
+    text-align: center;
+    height: 30px;
+    border: none;
+    background: transparent;
+    font-size: 20px;
+    font-weight: 500;
+    width: 60%;
+    border-bottom: 2px solid #8566aa;
+    outline: none;
+    margin-right: 20px;
+    scroll-behavior: smooth;
+    text-align: left;
+    
+}
+.newBtn{
+    width: 50px;
+    height: 55px;
+    background-color: #16a085 !important;
+    color: white !important;
+    border-radius: 50% !important;
+}
+.newBtn:hover{
+    background-color: #0b8e74 !important;
+}
+.newBtn .MuiSvgIcon-root{
+    width: 2rem !important;
+    height: 2rem !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ol li{
+    padding: 0px;
+    text-align: left;
+    font-size: 20px;
+    font-weight: 500;
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+    color: #8566aa;
+    list-style: none;
+    
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.list{
+    position: relative;
+    padding-top: 5px;
+    width: 100%;
+    height: 69%;
+    overflow-y: scroll;
+    margin-top: 1px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo_style{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.todo{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo_style .icons{
+    display: flex;
 }
+.completed{
+    text-decoration: line-through;
+    color: #8566aa
+}
+.todo_style .deleteIcon{
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    padding: 5px;
+    color: aliceblue;
+    background-color: #8566aa;
+    cursor: pointer;
+}
+ .edit{
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    padding: 5px;
+    color: aliceblue;
+    background-color: #8566aa;
+    cursor: pointer;
+}
+ .edit:hover{
+    background-color: #16a085;
+    color: white;
+}
+.todo_style .deleteIcon:hover{
+    background-color: crimson;
+    color: white;
+}
+.todo_style .Forever{
+    margin: 0 5px 0 10px;
+}
+.todo .checkbox{
+    color: #8566aa;
+ }
+.todo .checkbox:hover{
+   color: green;
+}
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgba(149, 118, 186,0.4);
+    border-radius: 10px;
+  }
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(149, 118, 186,0.8);
+  }
